--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
 
 jobs:
-  Build-test:
+  Build-Test:
     runs-on: ubuntu-latest
 
     steps:
@@ -17,5 +17,8 @@ jobs:
         with:
           node-version: '16'
       
+      - name: NPM Packages
+        run: npm install
+        
       - name: Test Application
         run: npm run test
