--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
       
       - name: Setup node v16.x
-        uses: actions/setup-node@2
+        uses: actions/setup-node@v1
         with:
           node-version: '16'
       
