--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "next": "11.0.1",
+    "next-pwa": "^5.2.24",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
@@ -25,6 +26,8 @@
     "@types/node": "^16.4.0",
     "@types/react": "^17.0.15",
     "babel-jest": "^27.0.6",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^11.0.1",
     "jest": "^27.0.6",
     "ts-jest": "^27.0.4",
     "ts-node": "^10.1.0",
